// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleItemButtons /> rendering should handle deleting state 1`] = `
<span
  class="wrapper"
>
  <i
    class="material-icons icon isLeft medium"
  >
    delete
  </i>
  Delete rule
</span>
`;

exports[`<RuleItemButtons /> rendering should handle disabled duplicate 1`] = `
<span>
  Update rule
</span>
`;

exports[`<RuleItemButtons /> rendering should handle disabled duplicate 2`] = `
<span>
  Duplicate rule
</span>
`;

exports[`<RuleItemButtons /> rendering should handle disabled submit 1`] = `
<span>
  Update rule
</span>
`;

exports[`<RuleItemButtons /> rendering should handle disabled submit 2`] = `
<span>
  Duplicate rule
</span>
`;

exports[`<RuleItemButtons /> rendering should render the default buttons for created 1`] = `
<div
  class="buttons-container"
>
  <div>
    <button
      aria-disabled="false"
      class="wrapper fill primary medium"
      form="rule-form"
      id="rule-item-save"
      type="button"
    >
      <span>
        Create rule
      </span>
    </button>
  </div>
</div>
`;

exports[`<RuleItemButtons /> rendering should render the default buttons for update 1`] = `
<div
  class="buttons-container"
>
  <div>
    <button
      aria-disabled="false"
      class="wrapper fill primary medium"
      form="rule-form"
      id="rule-item-save"
      type="button"
    >
      <span>
        Update rule
      </span>
    </button>
    <button
      aria-disabled="false"
      class="wrapper ml-3 fill secondary medium"
      id="rule-item-duplicate"
      type="submit"
    >
      <span>
        Duplicate rule
      </span>
    </button>
  </div>
  <div>
    <button
      aria-disabled="false"
      class="wrapper fill destructive medium"
      id="rule-item-delete"
      type="button"
    >
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft medium"
        >
          delete
        </i>
        Delete rule
      </span>
    </button>
  </div>
</div>
`;
